--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <!-- <br /> -->
             для вашего бизнеса
           </h1>
-          <button type="button" class="hero__btn" data-modal-open>Заказать услугу</button>
+          <button type="button" class="hero__btn btn" data-modal-open>Заказать услугу</button>
         </div>
       </section>
       <!--------------ADVANTAGES---------------->
@@ -444,7 +444,7 @@
         <label class="signup__title--light signup__title" for="signup-mail">Подпишитесь на рассылку</label>
         <div class="signup__wrap">
         <input id="signup-mail" type="email" name="signup-mail" class="signup__input" placeholder="E-mail">
-        <button type="submit" class="signup__btn--footer signup__btn">
+        <button type="submit" class="signup__btn--footer signup__btn btn">
           <span>Отправить</span>
           <svg class="signup__icon" width="24" height="24">
             <use href="./images/sprite.svg#send"></use>
@@ -540,7 +540,7 @@
               <a href="" class="agreement-link link">Условия договора</a>
             </label>
           </div>
-          <button type="submit" class="send__btn button">Отправить</button>
+          <button type="submit" class="send__btn btn">Отправить</button>
         </form>
       </div>
     </div>
