--- a/portfolio.html
+++ b/portfolio.html
@@ -276,7 +276,7 @@
                   </p>
                 </div>
                 <div class="portfolio__item-text">
-                  <h2>Growing Business</h2>
+                  <h2 class="portfolio__name">Growing Business</h2>
                   <p class="portfolio__type">Приложение</p>
                 </div>
               </a>
@@ -352,7 +352,7 @@
         <label class="signup__title--light signup__title" for="signup-mail">Подпишитесь на рассылку</label>
         <div class="signup__wrap">
         <input id="signup-mail" type="email" name="signup-mail" class="signup__input" placeholder="E-mail">
-        <button type="submit" class="signup__btn--footer signup__btn">
+        <button type="submit" class="signup__btn--footer signup__btn btn">
           <span>Отправить</span>
           <svg class="signup__icon" width="24" height="24">
             <use href="./images/sprite.svg#send"></use>
